# Elections-Manifestos-Classification

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: EDA.ipynb
src/: preprocessing.py
